Fav Locations Saved and Displayed!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_activity_maps">MapsActivity</string>
     <string name="googleMapsKey">AIzaSyAnPU2crxXHZGIgMKQpYzxSbpmtvapghiY</string>
     <string name="title_activity_routes">RoutesActivity</string>
+    <string name="title_activity_fav">FavActivity</string>
+
 </resources>
